
Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

** Please also check out the JSP, Hibernate and I18N contributed projects **


Enhancements since 1.3
----------------------
- Years/Months/Weeks/Days/Hours/Minutes/Seconds
  New group of single field period classes
  These allow applications to specify a specific field in method signatures and calculations
  Methods are provided to convert between most of these based on standard length periods

- Period.ZERO
  Add zero-length constant to Period


Compatibility with 1.3
----------------------
Binary compatible - Yes

Source compatible - Yes, except
  If you subclassed AbstractReadableInstantFieldProperty (unlikely) then
  you now need to override getChronology() to re-enable the equals() and
  hashCode() methods.

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2006n

Semantic compatible - Yes


Deprecations since 1.3
----------------------


Bug fixes since 1.3
-------------------
- GJChronology
  Text value of ReadablePartial fields was always a decimal number.

- Comparisons of Chronology instances by identity  [1576727]
  Some comparisons of Chronology instances were performed using ==
  This worked fine in most cases due to agressive caching, however it failed when
  using LenientChronology and other wrapping chronologies which do not have caching
  Comparison is now via equals(), and involved adding equals() methods to a number
  of classes. In addition, subclasses of AbstractReadableInstantFieldProperty must
  now implement getChronology().


Feedback
--------
All feedback is welcomed via the joda-interest mailing list.

The Joda team