@@ -27,6 +27,9 @@ Enhancements since 1.3
 - Period.ZERO
   Add zero-length constant to Period
 
+- PeriodFormatBuilder.append(PeriodPrinter,PeriodParser)
+  This method completes the API of PeriodFormatBuilder in the style of DateTimeFormatBuilder
+
 
 Compatibility with 1.3
 ----------------------
